Added way to get user input then predict

--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "id": "c4d48a9f",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "\n",
@@ -37,16 +37,16 @@
     "random_forest_model.fit(features_train, target_train)\n",
     "\n",
     "# Check accuracy through RMSE\n",
-    "target_prediction = random_forest_model.predict(features_test)\n",
-    "RMSE = mean_squared_error(target_test, target_prediction, squared=False)\n",
+    "target_predictions = random_forest_model.predict(features_test)\n",
+    "RMSE = mean_squared_error(target_test, target_predictions, squared=False)\n",
     "avg_error = round(RMSE * 100000, 2)\n",
     "print(f\"On average, house estimation values are ${avg_error:.2f} off.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "c4295d5f",
+   "execution_count": 67,
+   "id": "a2ad3903",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "max     1243.333333     41.950000   -114.310000      5.000010  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -228,8 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "106d5fee",
+   "execution_count": 68,
+   "id": "5214d5fb",
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "1a7fbe59",
+   "execution_count": 69,
+   "id": "1c9ce091",
    "metadata": {},
    "outputs": [
     {
@@ -290,10 +290,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6798d7",
+   "id": "122daff7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_property_value():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            ave_rooms = float(input(\"Enter the average number of rooms: \"))\n",
+    "            if ave_rooms < 0:\n",
+    "                raise ValueError(\"Average number of rooms cannot be negative\")\n",
+    "                \n",
+    "            latitude = float(input(\"Enter the latitude: \"))\n",
+    "            if latitude < 32.5 or latitude > 42.5:\n",
+    "                raise ValueError(\"Latitude must be within California (32.5 - 42.5)\")\n",
+    "                \n",
+    "            longitude = float(input(\"Enter the longitude: \"))\n",
+    "            if longitude < -124.5 or longitude > -114.5:\n",
+    "                raise ValueError(\"Longitude must be within California (-124.5 - -114.5)\")\n",
+    "                \n",
+    "            med_income = float(input(\"Enter the median income: \"))\n",
+    "            if med_income < 0:\n",
+    "                raise ValueError(\"Median income cannot be negative\")\n",
+    "                \n",
+    "            return [ave_rooms, latitude, longitude, med_income]\n",
+    "        \n",
+    "        except ValueError as e:\n",
+    "            print(\"Invalid input. \" + str(e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19d3d3e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict():\n",
+    "    \n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
