--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "c4d48a9f",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "a37b4a48",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "max     1243.333333     41.950000   -114.310000      5.000010  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "4bb223b9",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "b8da45f3",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "8a402ec4",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "f8850f94",
    "metadata": {},
    "outputs": [],
@@ -349,38 +349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c195902d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter number of rooms: 20\n",
-      "Enter latitude(32.5 - 42): 42\n",
-      "Enter longitude(-124.65 - -114.13): -114\n",
-      "Error: Longitude must be between -124.65 and -114.13.\n",
-      "Enter longitude(-124.65 - -114.13): -113\n",
-      "Error: Longitude must be between -124.65 and -114.13.\n",
-      "Enter longitude(-124.65 - -114.13): -115\n",
-      "Enter yearly income of current/previous household: 500000\n",
-      "Your house is estimated to be worth $308448.05 dollars.\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# Run this cell by clicking on it, then clicking \"Run\" or clicking shift + enter\n",
     "predict_property_value()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14e2468d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
