Changed instructions since it'll be hosted on Binder

--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -356,7 +356,8 @@
    },
    "outputs": [],
    "source": [
-    "# Run this cell by clicking on it, then clicking \"Run\" or clicking shift + enter\n",
+    "# Go to Run -> Run All Cells\n",
+    "# If you wish to rerun this cell to predict more Californian property values, click on this cell then click shift + enter\n",
     "predict_property_value()"
    ]
   }
